...
  ~ // THE SOFTWARE.
  -->

<resources>
    <string name="app_name">AndroidAutomationApp</string>
    <string name="into_text">Android Automation Test App!</string>
    <string name="acquire_token">Acquire Token</string>
    <string name="acquire_token_silent">Acquire Token Silent</string>
    <string name="invalidate_AT">Expire Access Token</string>
    <string name="invalidate_token">Invalidate Refresh Token</string>
    <string name="empty_cache">Clear Cache</string>
    <string name="read_cache">Read Cache</string>
    <string name="run_stress">Run Stress</string>
    <string name="open_webview">Open WebView</string>
    <string name="auth_dialog_title">Test Title</string>
    <string name="signin_info">Enter the sign-in info</string>
    <string name="go">Go</string>
    <string name="enter_signin_info">Please enter the sign in info here...</string>
    <string name="done">Done</string>
</resources>

