...
              android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_signin_info"
        android:id="@+id/requestInfo"
        android:layout_gravity="center_horizontal"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_weight="1"
        android:inputType="textNoSuggestions" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:background="@color/buttonColor"
        android:id="@+id/requestGo"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
