...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/into_text"/>

    <!-- AcquireToken button -->
    <Button
        android:id="@+id/acquireToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introText"
        android:layout_centerHorizontal="true"
        android:text="@string/acquire_token" />

...
